--- a/index-edited.html
+++ b/index-edited.html
@@ -60,10 +60,10 @@ a:hover,.navbar-default .navbar-nav>.active>a:focus{color:#555;background-color:
 </button><img style="padding-top:20px;" src="healthlogof.jpg"></a></div>
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <ul class="nav navbar-nav">
-<li>LOVE</a></li>
-<li>CELEBS</a></li>
-<li>BEAUTY</a></li>
-<li>GIFT IDEAS</a></li>
+<li><a href="https://healthreport.ga/">LOVE</a></li>
+<li><a href="https://healthreport.ga/">CELEBS</a></li>
+<li><a href="https://healthreport.ga/">BEAUTY</a></li>
+<li><a href="https://healthreport.ga/">GIFT IDEAS</a></li>
 </ul>
 </div>
 </div>
