--- a/Ohio-based-Woman-got-sobered.html
+++ b/Ohio-based-Woman-got-sobered.html
@@ -121,7 +121,7 @@ She later told her about the very confidential 7 step program that All the treat
 <b> </b>
 </p><p><b><img class="img-responsive" src="mark.jpg"></b></p>
 <b> </b>
-<h5><b><i>Your impartial information and extensive knowledge was a breath of fresh air compared to previous advice I had received. Thank you for helping me to make the right choice for my myself and my family. : Sheila, Florida</i></b></h5>
+<h5><b><i>Your impartial information and extensive knowledge was a breath of fresh air compared to previous advice I had received. Thank you for helping me to make the right choice for my myself and my family. : Noah Harper, Florida</i></b></h5>
 <b> </b>
 <div class="top-bottom-border"></div>
 <b> </b>
@@ -152,21 +152,21 @@ She later told her about the very confidential 7 step program that All the treat
 <b><img class="img-responsive" src="beforeafter_3.jpg"></a> </b>
 <p class="m-b-5"><a href="tel:8887342207"><b>Rehab Placement Services</b></a> saved my life. I have a fulfilling life again with purpose and direction. I feel happy, content and free again. Thank you for helping me turn my life around.</p>
 <b> </b>
-<p><b><strong><i>Lacey Brown,<br>
+<p><b><strong><i>Cameron Gallagher,<br>
 California</i></strong></b></p>
 <b>  </b>
 <h5 class="m-b-0 pink-border-bottom"><b>BEFORE &amp; AFTER</b></h5>
 <b> <img class="img-responsive" src="beforeaftermini3.jpg"> </b>
 <p class="m-b-5"><i><a href="tel:8887342207"><b>Rehab Placement Services</b></a> helped us to rebuild our lives. We have our son back, fit, healthy and happy again and words can not describe the gratitude we feel for the friendly and skillfull advice we received from <a href="tel:8887342207"><b>Rehab Placement Services</b></a> and for the fact they really listened in helping solve our family crisis. We are so grateful for the guidance and support. Thank you! Thanks so much! </i></p>
 <b> </b>
-<p><b><strong><i>Andrea Taylor,<br>
+<p><b><strong><i>Oliver Craig,<br>
 Georgia</i></strong></b></p>
 <b> </b>
 <h5 class="m-b-0 pink-border-bottom"><b>BEFORE &amp; AFTER</b></h5>
 <b> <img class="img-responsive" src="beforeafter_1.jpg" height="151"> </b>
 <p class="m-b-5"><i>Thanks to calling <a href="tel:8887342207"><b>Rehab Placement Services</b></a> I was able to find the most suitable treatment for my addiction. I now feel happy and free again. I believe that having skilled and friendly advisors at <a href="tel:8887342207"><b>Rehab Placement Services</b></a> were essential in helping me find the right rehab centre to suit me. Along with the continual support, phone calls and great aftercare I have manged to stay clean and sober for over 2 years. I can not thank <a href="tel:8887342207">Rehab Placement Services</a> Healthcare enough. </i></p>
 <b> </b>
-<p><b><strong><i>Kelly Smith,<br>
+<p><b><strong><i>Owen Perkins,<br>
 Illinois</i></strong></b></p>
 <b> </b>
 <h5 class="m-b-0 pink-border-bottom"><b><b>Special Offer</b></b></h5>
@@ -189,7 +189,7 @@ Available on Thursday, July 20, 2020</b></div>
 <b>  <img class="img-responsive" src="beforeafter_6.jpg"> </a> </b>
 <p class="m-b-5"><i>"My treatment through <a href="tel:8887342207"><b>Rehab Placement Services</b></a> out measured anything I could have ever imagined. The balance of lectures, experiential therapy, and workshops worked very well for me! I'm so happy!!!" </i></p>
 <b> </b>
-<p><b><strong><i>Christina Butler,<br>
+<p><b><strong><i>Jake Parkes,<br>
 Tennessee</i></strong></b></p>
 <b> </b>
 <h5 class="m-b-0 pink-border-bottom"><b>BEFORE &amp; AFTER</b></h5>
@@ -197,7 +197,7 @@ Tennessee</i></strong></b></p>
 <p class="m-b-5"><i>"I was extremely nervous upon calling <a href="tel:8887342207"><b>Rehab Placement Services</b></a> and arriving to  their one of the preferred treatment partner center. Everyone made me feel welcome. I would recommend <a href="tel:8887342207"><b>Rehab Placement Services</b></a> to anyone who wants to recover from their addictions.!"</i></p>
 <b> </b>
 <p><b><strong><i>Carol Keeton,<br>
-Aberdeen</i></strong></b></p>
+Michigan</i></strong></b></p>
 <b> </b>
 <h5 class="m-b-0 pink-border-bottom"><b>BEFORE &amp; AFTER</b></h5>
 <b>  <img class="img-responsive" src="rebecca_milwaukee.jpg" height="151"> </a> </b>
